test/error/test1.pl0
PROGRAM test1
VAR x, 2x;
BEGIN
  x:=2
END